// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> renders the <Card /> with and clicks the card feature 1`] = `
<div
  class="card__Group-s87lnr-2 iGMrZK"
>
  <div
    class="card__Container-s87lnr-1 hCZzYq"
  >
    <p
      class="card__Title-s87lnr-0 cOUXPu"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-12 dYhVsf"
    >
      <div
        class="card__Item-s87lnr-13 kkJpXs"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-s87lnr-14 jdFsCj"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-11 otOSn"
        >
          <p
            class="card__SubTitle-s87lnr-3 ihyWpi"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 kSFMJv"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 hCZzYq"
  >
    <p
      class="card__Title-s87lnr-0 cOUXPu"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-12 dYhVsf"
    >
      <div
        class="card__Item-s87lnr-13 kkJpXs"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-s87lnr-14 jdFsCj"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-11 otOSn"
        >
          <p
            class="card__SubTitle-s87lnr-3 ihyWpi"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 kSFMJv"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> renders the <Card /> with populated data 1`] = `
<div
  class="card__Group-s87lnr-2 iGMrZK"
>
  <div
    class="card__Container-s87lnr-1 hCZzYq"
  >
    <p
      class="card__Title-s87lnr-0 cOUXPu"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-12 dYhVsf"
    >
      <div
        class="card__Item-s87lnr-13 kkJpXs"
      >
        <img
          class="card__Image-s87lnr-14 jdFsCj"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-11 otOSn"
        >
          <p
            class="card__SubTitle-s87lnr-3 ihyWpi"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 kSFMJv"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 hCZzYq"
  >
    <p
      class="card__Title-s87lnr-0 cOUXPu"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-12 dYhVsf"
    >
      <div
        class="card__Item-s87lnr-13 kkJpXs"
      >
        <img
          class="card__Image-s87lnr-14 jdFsCj"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-11 otOSn"
        >
          <p
            class="card__SubTitle-s87lnr-3 ihyWpi"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 kSFMJv"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
